--- a/CapMem/AndroidManifest.xml
+++ b/CapMem/AndroidManifest.xml
@@ -22,6 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.memorizacao.AtividadeSobre"
+            android:label="@string/title_activity_atividade_sobre" >
+        </activity>
     </application>
 
 </manifest>
